# meta-harness

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  SECURITY.md  check_records.py  create_weekly_task.ps1  pyproject.toml  weekly_report.py
docs/: INTEGRATION.md
src/meta_harness/: __init__.py  py.typed
src/meta_harness/evaluator/: __init__.py
src/meta_harness/tracker/: __init__.py
tests/: test_evaluator.py  test_tracker.py
